# LaoQGChatApp

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
qml/: main.qml
qml/Component/: Account.qml  Chat.qml
qml/Component/Chat/: SessionArea.qml  SessionTab.qml
src/: Common.cpp  Common.h  main.cpp
src/Component/: chat.cpp  chat.h  login.cpp  login.h
src/Component/Chat/: chatsession.cpp  chatsession.h  sessionarea.cpp  sessionarea.h
